# qt6-tcp-client

./: CMakeLists.txt  README.md  emulator.cpp  emulator.h  main.cpp
